--- a/client/package.json
+++ b/client/package.json
@@ -11,16 +11,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.12",
     "autoprefixer": "^10.4.15",
     "axios": "^1.4.0",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.15.0",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
