--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.11.0",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
